now noVNC properly works
Co-authored-by: Copilot <copilot@github.com>